# cargo-ferris-wheel

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  lefthook.yml
.github/workflows/: build.yaml  cross-build.yaml  publish.yaml
src/: cli.rs  common.rs  constants.rs  dependency_filter.rs  error.rs  lib.rs  main.rs  progress.rs  toml_parser.rs  workspace_discovery.rs
src/analyzer/: analyzer_impl.rs  dependency_classifier.rs  mod.rs
src/commands/: affected.rs  analyze.rs  check.rs  deps.rs  graph.rs  mod.rs
src/config/: affected.rs  analyze.rs  check.rs  common.rs  deps.rs  graph.rs  mod.rs
src/core/: mod.rs  types.rs
src/detector/: detector_impl.rs  mod.rs
src/executors/: affected.rs  analyze.rs  check.rs  deps.rs  graph.rs  mod.rs
src/graph/: builder.rs  mod.rs  renderer.rs  types.rs
src/reports/: github.rs  human.rs  json.rs  junit.rs  mod.rs
src/utils/: mod.rs  string.rs
tests/: graph_renderer_test.rs  integration_test.rs  readme_example.rs
