[package]
authors       = ["Ellipsis Labs Team", "Brenden Matthews <brenden@brndn.io>"]
categories    = ["development-tools", "development-tools::cargo-plugins"]
description   = "🎡 Detect workspace dependency cycles in Rust monorepos"
documentation = "https://docs.rs/cargo-ferris-wheel"
edition       = "2024"
homepage      = "https://github.com/Ellipsis-Labs/cargo-ferris-wheel"
keywords      = ["cargo", "workspace", "dependencies", "cycles", "monorepo"]
license       = "MIT"
name          = "cargo-ferris-wheel"
readme        = "README.md"
repository    = "https://github.com/Ellipsis-Labs/cargo-ferris-wheel"
rust-version  = "1.88.0"
version       = "1.0.6"

[lib]
name = "cargo_ferris_wheel"
path = "src/lib.rs"

[[bin]]
name = "cargo-ferris-wheel"
path = "src/main.rs"

[dependencies]
clap       = { version = "4.5", features = ["derive", "cargo", "env"] }
console    = "0.16"
glob       = "0.3"
indicatif  = { version = "0.18", features = ["rayon"] }
miette     = { version = "7.6", features = ["fancy"] }
petgraph   = "0.8"
rayon      = "1.10"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "2.0"
toml       = "0.9"
walkdir    = "2.5"

[features]
default = []

[dev-dependencies]
predicates        = "3.1"
pretty_assertions = "1.4"
tempfile          = "3.20"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
